добиваем промежуточную 2